UC19 Deels klaar: app crasht nog na het toevoegen van een product

--- a/Grocery.App/Views/ProductView.xaml
+++ b/Grocery.App/Views/ProductView.xaml
@@ -4,7 +4,9 @@
              xmlns:vm="clr-namespace:Grocery.App.ViewModels"
              x:Class="Grocery.App.Views.ProductView"
              Title="ProductView">
-    
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Voeg nieuw product toe" Command="{Binding NewProductCommand}" x:DataType="vm:ProductViewModel" />
+    </ContentPage.ToolbarItems>
     <Shell.TitleView>
         <Grid>
             <Label Text="Producten" FontSize="Large" HorizontalOptions="Center" VerticalOptions="Center" />
